--- a/style/styles.scss
+++ b/style/styles.scss
@@ -1,4 +1,10 @@
 @charset "UTF-8";
+@font-face {
+  font-family: 'MaruMonica';
+  src: url('fonts/MaruMonica.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 body {
   background-color: #958e80;
