--- a/style/styles.scss
+++ b/style/styles.scss
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 @font-face {
-  font-family: 'MaruMonica';
+  font-family: 'x12y16pxMaruMonica';
   src: url('fonts/MaruMonica.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
