update styles.css, styles.min.css and styles.scss

--- a/style/styles.scss
+++ b/style/styles.scss
@@ -1,9 +1,12 @@
 @charset "UTF-8";
 @font-face {
   font-family: 'x12y16pxMaruMonica';
-  src: url('fonts/MaruMonica.ttf') format('truetype');
+  src: url('fonts/MaruMonica.woff2') format('woff2'),
+       url('fonts/MaruMonica.woff') format('woff'),
+       url('fonts/MaruMonica.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 body {
@@ -128,5 +131,8 @@ body {
 }
 
 h1 {
+  color: #463926;
+}
+h2 {
   color: #463926;
 }
